mdapi_temp_dir/objects/Competitor__c.object
<CustomObject>
    <label>Competitor</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Competitors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Awarded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Awarded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_Bid_Amount__c</fullName>
        <label>Competitor Bid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitive Deals</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Construction_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Construction Job</label>
        <referenceTo>Construction_Job__c</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>